java 8 stream feature - Printing square of the numbers in the list.